--- a/StarvedRockApp/Base.lproj/Main.storyboard
+++ b/StarvedRockApp/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <scenes>
         <!--News View Controller-->
@@ -41,14 +41,22 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Starved Rock Map" id="Fd2-Gw-qCD">
-                        <barButtonItem key="leftBarButtonItem" title="News" id="eCS-oY-jY2"/>
-                        <barButtonItem key="rightBarButtonItem" title="Filters" id="G4P-Ko-1wu"/>
+                        <barButtonItem key="leftBarButtonItem" title="News" id="eCS-oY-jY2">
+                            <connections>
+                                <action selector="newsTapped:" destination="9R0-kq-BKe" id="NAl-jj-Hdy"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Filters" id="G4P-Ko-1wu">
+                            <connections>
+                                <action selector="filtersTapped:" destination="9R0-kq-BKe" id="D1R-pO-eKg"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nUl-IK-O2f" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="890" y="670"/>
+            <point key="canvasLocation" x="860" y="797"/>
         </scene>
         <!--Filters View Controller-->
         <scene sceneID="3Nv-EC-xlO">
