--- a/StarvedRock/res/layout/poi_view.xml
+++ b/StarvedRock/res/layout/poi_view.xml
@@ -2,4 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent">
+    <TextView
+        
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:text="Please see this"
+    android:textSize="20sp"
+    android:textColor="#00FF00"
+        />
+   </LinearLayout>
