Database is working properly. Next thing to do is create/populate notificationfragment and poifragment.

--- a/StarvedRock/res/layout/poi_view.xml
+++ b/StarvedRock/res/layout/poi_view.xml
@@ -7,8 +7,6 @@
         
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:text="Please see this"
-    android:textSize="20sp"
-    android:textColor="#00FF00"
-        />
+    android:id="@+id/poiText"
+         />
    </LinearLayout>
