--- a/iOS/StarvedRockApp/Base.lproj/Main.storyboard
+++ b/iOS/StarvedRockApp/Base.lproj/Main.storyboard
@@ -2,12 +2,13 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--News View Controller-->
+        <!--New View Controller-->
         <scene sceneID="aep-wn-M9T">
             <objects>
-                <viewController id="6JY-HQ-YNn" customClass="NewsViewController" customModule="StarvedRockApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="NewsViewController" title="New View Controller" id="6JY-HQ-YNn" customClass="NewsViewController" customModule="StarvedRockApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="R5l-9x-esV"/>
                         <viewControllerLayoutGuide type="bottom" id="JeF-ij-Ybp"/>
@@ -15,6 +16,21 @@
                     <view key="view" contentMode="scaleToFill" id="GXu-Qe-2uo">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="hUV-GO-VvV">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewsCell" id="TWm-a6-G7R">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="TWm-a6-G7R" id="ZRD-Kd-SM8">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
@@ -22,10 +38,10 @@
             </objects>
             <point key="canvasLocation" x="127" y="797"/>
         </scene>
-        <!--Cneter Map View Controller-->
+        <!--Center Map View Controller-->
         <scene sceneID="hvM-1S-mIv">
             <objects>
-                <viewController title="Cneter Map View Controller" id="9R0-kq-BKe" customClass="CenterMapViewController" customModule="StarvedRockApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CenterMapViewController" title="Center Map View Controller" id="9R0-kq-BKe" customClass="CenterMapViewController" customModule="StarvedRockApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="4bl-K7-nux"/>
                         <viewControllerLayoutGuide type="bottom" id="Ua9-dG-Zv5"/>
@@ -34,11 +50,17 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="vvj-eM-A69">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="vvj-eM-A69">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="vvj-eM-A69" firstAttribute="top" secondItem="RvY-c1-ryQ" secondAttribute="topMargin" id="Q5P-cN-KEU"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="vvj-eM-A69" secondAttribute="trailing" constant="-16" id="ROW-wx-xlr"/>
+                            <constraint firstItem="Ua9-dG-Zv5" firstAttribute="top" secondItem="vvj-eM-A69" secondAttribute="bottom" id="m6Y-68-ewH"/>
+                            <constraint firstItem="vvj-eM-A69" firstAttribute="leading" secondItem="RvY-c1-ryQ" secondAttribute="leadingMargin" constant="-16" id="xV5-aF-9RO"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Starved Rock Map" id="Fd2-Gw-qCD">
                         <barButtonItem key="leftBarButtonItem" title="News" id="eCS-oY-jY2">
@@ -53,6 +75,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="mapView" destination="vvj-eM-A69" id="A8u-QM-WgC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nUl-IK-O2f" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -61,7 +86,7 @@
         <!--Filters View Controller-->
         <scene sceneID="3Nv-EC-xlO">
             <objects>
-                <viewController id="ndl-VK-JVh" customClass="FiltersViewController" customModule="StarvedRockApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FiltersViewController" title="Filters View Controller" id="ndl-VK-JVh" customClass="FiltersViewController" customModule="StarvedRockApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="KQa-WM-EBG"/>
                         <viewControllerLayoutGuide type="bottom" id="01O-uo-cbz"/>
@@ -69,12 +94,60 @@
                     <view key="view" contentMode="scaleToFill" id="J0k-9N-xSO">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="ArD-2X-SqX">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Search Filters or Points of Interest" id="0yT-m8-LuX">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="detailDisclosureButton" indentationWidth="10" reuseIdentifier="FilterCell" id="l8n-3u-LmJ" customClass="FilterCell" customModule="StarvedRockApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="l8n-3u-LmJ" id="6Hr-Yb-7eL">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Filter" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SrQ-qb-del">
+                                                    <rect key="frame" x="8" y="12" width="460" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="C9N-zU-GKC">
+                                                    <rect key="frame" x="476" y="6" width="51" height="31"/>
+                                                </switch>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="SrQ-qb-del" firstAttribute="top" secondItem="6Hr-Yb-7eL" secondAttribute="topMargin" constant="4" id="KHw-mM-mtO"/>
+                                                <constraint firstItem="SrQ-qb-del" firstAttribute="leading" secondItem="6Hr-Yb-7eL" secondAttribute="leadingMargin" id="cM0-w6-H7z"/>
+                                                <constraint firstItem="C9N-zU-GKC" firstAttribute="trailing" secondItem="6Hr-Yb-7eL" secondAttribute="trailingMargin" id="dPs-LR-Be2"/>
+                                                <constraint firstItem="C9N-zU-GKC" firstAttribute="leading" secondItem="SrQ-qb-del" secondAttribute="trailing" constant="8" symbolic="YES" id="oUP-og-vVO"/>
+                                                <constraint firstItem="C9N-zU-GKC" firstAttribute="centerY" secondItem="6Hr-Yb-7eL" secondAttribute="centerY" id="rRW-7E-ujd"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="filterName" destination="SrQ-qb-del" id="Aed-zJ-iqG"/>
+                                            <outlet property="filterToggle" destination="C9N-zU-GKC" id="ZMe-t6-qLH"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ArD-2X-SqX" firstAttribute="top" secondItem="J0k-9N-xSO" secondAttribute="topMargin" id="DzY-40-WLk"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ArD-2X-SqX" secondAttribute="trailing" constant="-16" id="UKY-UR-HvP"/>
+                            <constraint firstItem="ArD-2X-SqX" firstAttribute="leading" secondItem="J0k-9N-xSO" secondAttribute="leadingMargin" constant="-16" id="loT-UA-8To"/>
+                            <constraint firstItem="01O-uo-cbz" firstAttribute="top" secondItem="ArD-2X-SqX" secondAttribute="bottom" id="tdE-1E-p4J"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EsZ-HD-k8H" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1589" y="797"/>
+            <point key="canvasLocation" x="1707" y="801"/>
         </scene>
     </scenes>
 </document>
