--- a/StarvedRock/res/layout/activity_poi.xml
+++ b/StarvedRock/res/layout/activity_poi.xml
@@ -1,6 +1,23 @@
-<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".POIActivity" />
+    android:orientation="vertical"
+    tools:context=".POIActivity" >
+
+    <TextView
+        android:id="@+id/nameView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.10"
+         />
+
+    <dTextView
+        android:id="@+id/noteView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.10"
+         />
+
+</LinearLayout>
