--- a/StarvedRock/res/layout/activity_poi.xml
+++ b/StarvedRock/res/layout/activity_poi.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/pager"
+    android:id="@+id/poi_activty"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -12,8 +12,13 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.10"
          />
-
-    <dTextView
+	<TextView
+        android:id="@+id/catView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.10"
+         />
+    <TextView
         android:id="@+id/noteView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
